--- a/styles.css
+++ b/styles.css
@@ -36,11 +36,9 @@ body{
     font-weight: lighter;
     z-index: 2;
 }
-
 .info{
-    
-    color:white;
     text-align: center;
+    color:white;
 }
 
 .image-cropper {
@@ -81,7 +79,7 @@ body{
 
   #ref{
       display: inline-block;
-      position: absolute;
+      position: relative;
       width: auto;
       letter-spacing: 1em;
       font-size: 1.5em;
