--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,16 @@ body{
     font-weight: lighter;
     z-index: 2;
 }
+
+.name{
+    color:white;
+    font-weight:bold;
+    text-align:center; 
+    overflow: hidden; 
+    font-size-adjust: 0.70;
+
+}
+
 .info{
     text-align: center;
     color:white;
@@ -70,7 +80,7 @@ body{
 
   h1{
       margin-top: 0;
-      font-size: 55px;
+      font-size: 45px;
   }
   p{
      position: relative;
