--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+
 .container{
-    background: grey;
+    background:black;
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+}
+
+.information{
+    background:#fff;
+    height:100vh;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+#down{
+    margin-top: 100%;
+    padding-bottom: 25%;
 }
 
 a {
     text-decoration: none !important;
-   
     font-weight: 00;
     font-size: 1.em;
 }
@@ -23,7 +40,7 @@ body{
     display: inline-block;
     color:black;
     background-color: #000;
-    opacity: 0.87;
+    opacity: 0.89;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -98,6 +115,78 @@ body{
       transform: translate(-50%,-50%);
       
   }
+
+.scroll-down{
+    position: absolute;
+    bottom: 2rem;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.mouse{
+    width: 2.5rem;
+    height: 5rem;
+    border: 3px solid #fff;
+    border-radius: 2rem;
+    display: flex;
+}
+.mouse span{
+   width: 1rem;
+    height: 1rem;
+    background-color: white;
+    display: block;
+    border-radius: 50%;
+    margin: auto;
+    animation: move-wheel 1.2s linear infinite;
+}
+
+.arrow span{
+    display: block;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 3px solid transparent;
+    border-right-color: #fff;
+    border-bottom-color: #fff;
+    transform: rotate(45deg);
+    animation: move-arrow .6s alternate infinite;
+}
+
+@keyframes move-wheel{
+    0%{
+        opacity: 0;
+        transform: translateY(-1rem);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(1rem);
+    }
+}
+
+@keyframes move-arrow{
+    0%{
+        opacity: 0;
+    }
+    25%{
+        opacity: 0.25;
+        
+    }
+    50%{
+        opacity: 0.5;
+        
+    }
+    75%{
+        opacity: 0.75;
+        
+    }
+    100%{
+        opacity: 1;
+       
+    }
+}
 
 .fab fa-linkedin{
     color: #0077B5
