--- a/styles.css
+++ b/styles.css
@@ -127,32 +127,15 @@ body{
     
 }
 
-.mouse{
-    width: 2.5rem;
-    height: 5rem;
-    border: 3px solid #fff;
-    border-radius: 2rem;
-    display: flex;
-}
-.mouse span{
-   width: 1rem;
-    height: 1rem;
-    background-color: white;
-    display: block;
-    border-radius: 50%;
-    margin: auto;
-    animation: move-wheel 1.2s linear infinite;
-}
-
 .arrow span{
     display: block;
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 2rem;
+    height: 2rem;
     border: 3px solid transparent;
     border-right-color: #fff;
     border-bottom-color: #fff;
     transform: rotate(45deg);
-    animation: move-arrow .6s alternate infinite;
+    animation: move-arrow 1s alternate-reverse infinite;
 }
 
 @keyframes move-wheel{
